2007-11-08  Rodrigo Kumpera <rkumpera@novell.com>

	* TypeBuilder.cs: Workaround for #82625 not needed anymore.
	GetFields() returns the created type fields.

2007-10-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* ILGenerator.cs: Added missing null checks. Removed extra tabs.

2007-09-23  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilder.cs: Added missing paramname to ArgumentExceptions.
	Use String.Length to check for zero-length string.

2007-09-23  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyBuilder.cs (GetManifestModule): Return a ModuleBuilder here to
	match MS.NET.

2007-09-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeBuilder.cs: Do not include static methods of base class in
	GetMethod(s). Fixes bug #327482.

2007-09-14  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyBuilder.cs (DefineVersionInfoResource): Allow the arguments to be
	null. Fixes #82832.

2007-09-11  Jb Evain  <jbevain@novell.com>

	* DynamicMethod.cs: store the owner of the DynamicMethod.

2007-09-09  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyBuilder.cs (DefineUnmanagedResource): Open file read-only. Fixes
	#72764.

2007-09-02  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs: Add a workaround for #82625 to make nemerle work again.

2007-08-29  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilder.cs: In DefineIconResource, open icon in read-only
	mode. Fixes bug #82617.

2007-08-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ILGenerator.cs: Change BeginCatchBlock to end the current filter block if called with a null exceptionType. Added ILExceptionBlock.FILTER_START to be able to track if we're in a filter block or not. Renamed PatchLastClauseStart to PatchFilterClause to match better what it does, and make it update the handler's type to FILTER. Fixes #81431.

2007-08-10  Zoltan Varga  <vargaz@gmail.com>

	* DynamicILInfo.cs: New file.

	* DynamicMethod.cs (GetDynamicILInfo): New 2.0 method.
